--- a/judul.html
+++ b/judul.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<marquee bgcolor="yellow"> KEBIASAAN NYOBA-NYOBA SI ANAKNYA</marquee>
+<marquee bgcolor="yellow">SELAMAT DATANG DI PROGRAMING KELOMPOK 2</marquee>
 <tr>
  <center>
 <font><h1>KELOMPOK 2 PKTI 2C</h1></center></font>
