--- a/frame1.html
+++ b/frame1.html
@@ -4,9 +4,9 @@
  <title>frame1</title>
 </head>
 <body>
-<img src="logo gundar.jpg" weigth ="300" height="200"
+<img src="logo gundar.jpg" weigth ="300" height="200">
 <tr>
-<a href= "https://baak.gunadarma.ac.id/">BAAK GUNADARMA</a>
-
+    <a id="tribute-link"
+href= "https://baak.gunadarma.ac.id/">BAAK GUNADARMA</a>
 </body>
 </html>
